UI branding fix

--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,15 @@
   <div class="page-shell">
 
     <!-- HEADER -->
-    <header class="header">
-      <div class="brand-row">
-        <div class="brand-icon">WM</div>
-        <h1 class="brand-title">WarmDM</h1>
+    <header class="hero-header">
+      <div class="logo-row">
+      <span class="logo-badge">WM</span>
+      <span class="logo-text">WarmDM</span>
       </div>
 
-      <h2 class="title">Rewrite any message so it sounds human.</h2>
-      <p class="subtitle">No cringe. No AI stiffness. Just natural tone.</p>
-    </header>
+      <h1 class="hero-title">Rewrite any message so it sounds human.</h1>
+      <p class="hero-subtitle">No cringe. No AI stiffness. Just natural tone.</p>
+  </header>
 
 
     <!-- TOOL AREA -->
