--- a/public/privacy.html
+++ b/public/privacy.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WarmDM – Privacy Policy</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- PostHog Web Analytics -->
+<script>
+  !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){
+    function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),
+    t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}
+    (p=t.createElement("script")).type="text/javascript",
+    p.async=!0,p.src=s.api_host+"/static/array.js",
+    (r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);
+    var u=e;void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],
+    ["capture","identify","alias","people.set","people.set_once","people.unset","reset","group","set_group","add_group","remove_group","register","register_once"].forEach(function(t){
+      g(u,t)}),e._i.push([i,s,a])},e.__SV=1)
+  }(document,window.posthog||[]);
+  posthog.init('phc_AdofVgzM8MbuW3hXxirojuJ1U6wPe1QOwzdDTi4LhKO', { api_host: 'https://us.i.posthog.com' });
+</script>
 </head>
 <body>
 
