--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WarmDM – Rewrite any message so it sounds human</title>
 
+  <!-- Primary Meta Tags -->
+  <title>WarmDM — Rewrite messages so they sound human</title>
+  <meta name="title" content="WarmDM — Rewrite messages so they sound human" />
   <meta name="description"
-        content="WarmDM rewrites your message so it sounds human — not stiff, not robotic, not AI-like. Choose tone + personality and get a natural rewrite you can actually send." />
+        content="WarmDM rewrites any message so it sounds natural, warm, and human — not stiff, not robotic, not AI-like. Paste, choose tone, get a human-grade rewrite instantly." />
 
+  <!-- Keywords (light, non-spammy) -->
+  <meta name="keywords" content="rewrite message, sound human, message rewriter, natural tone, rewrite text, humanize message, fix tone" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://warmdm.com/" />
+
+  <!-- OpenGraph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://warmdm.com/" />
+  <meta property="og:title" content="WarmDM — Rewrite messages so they sound human" />
+  <meta property="og:description"
+        content="WarmDM instantly rewrites your messages so they sound natural, warm, and human." />
+  <meta property="og:image" content="https://warmdm.com/warmdm-preview.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://warmdm.com/" />
+  <meta name="twitter:title" content="WarmDM — Rewrite messages so they sound human" />
+  <meta name="twitter:description"
+        content="WarmDM rewrites your messages so they sound natural, warm, and human." />
+  <meta name="twitter:image" content="https://warmdm.com/warmdm-preview.png" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="style.css" />
-  <!-- PostHog Web Analytics -->
-<script>
-  !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){
-    function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),
-    t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}
-    (p=t.createElement("script")).type="text/javascript",
-    p.async=!0,p.src=s.api_host+"/static/array.js",
-    (r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);
-    var u=e;void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],
-    ["capture","identify","alias","people.set","people.set_once","people.unset","reset","group","set_group","add_group","remove_group","register","register_once"].forEach(function(t){
-      g(u,t)}),e._i.push([i,s,a])},e.__SV=1)
-  }(document,window.posthog||[]);
-  posthog.init('phc_AdofVgzM8MbuW3hXxirojuJ1U6wPe1QOwzdDTi4LhKO', { api_host: 'https://us.i.posthog.com' });
-</script>
-</head>
 
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- PostHog Web Analytics -->
+  <script>
+    !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){
+      function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),
+      t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}
+      (p=t.createElement("script")).type="text/javascript",
+      p.async=!0,p.src=s.api_host+"/static/array.js",
+      (r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);
+      var u=e;void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],
+      ["capture","identify","alias","people.set","people.set_once","people.unset","reset","group","set_group","add_group","remove_group","register","register_once"].forEach(function(t){
+        g(u,t)}),e._i.push([i,s,a])},e.__SV=1)
+    }(document,window.posthog||[]);
+    posthog.init('phc_AdofVgzM8MbuW3hXxirojuJ1U6wPe1QOwzdDTi4LhKO',
+                 { api_host: 'https://us.i.posthog.com' });
+  </script>
+</head>
 <body>
 
   <div class="page-shell">
