Upgrade Unfiltered Mode to toggle switch

--- a/public/index.html
+++ b/public/index.html
@@ -106,9 +106,13 @@
           <!-- UNFILTERED -->
           <div class="unf-row">
             <label class="unf-label">
-              <input type="checkbox" id="unfilteredToggle" />
-              Unfiltered Mode 😈 <span class="tooltip-icon" title="Removes filters. Lets the AI follow any tone fully without softening. Use carefully.">ⓘ</span>
+              <span class="switch">
+                <input type="checkbox" id="unfilteredToggle" />
+              <span class="slider"></span>
+              </span>Unfiltered Mode 😈
+              <span class="tooltip-icon" title="Removes filters. Lets the AI follow any tone fully without softening. Use carefully.">ⓘ</span>
             </label>
+
           </div>
 
           <button id="rewriteBtn" class="primary-btn">Make it sound human</button>
