Add Founder Card

--- a/public/index.html
+++ b/public/index.html
@@ -202,6 +202,10 @@
 
     </main>
 
+    <div class="founder-contact">
+    Built by a real human.
+    <a href="https://x.com/gomichaels" target="_blank" rel="noopener">Say hi on Twitter</a>
+    </div>
 
     <!-- FOOTER -->
     <footer class="footer">
