minor index page section wrap

--- a/public/index.html
+++ b/public/index.html
@@ -155,14 +155,18 @@
         </div>
       </section>
 
+      <section class="info-section">
         <h3>Why people use WarmDM</h3>
-          <p>Most AI tools rewrite text, but they don’t fix tone. When people say <em>“AI sounds robotic”</em> or <em>“this doesn’t sound like me”</em>, they're talking about voice, not grammar. WarmDM solves that directly.</p>
-          <ul>
+
+        <p>Most AI tools rewrite text, but they don’t fix tone. When people say <em>“AI sounds robotic”</em> or <em>“this doesn’t sound like me”</em>, they're talking about voice, not grammar. WarmDM solves that directly.</p>
+        <ul>
           <li><strong>Rewrite to sound human</strong> — not stiff, not formal, not AI-like.</li>
           <li><strong>Make messages sound like you</strong> — personal, natural, consistent.</li>
           <li><strong>Fix AI tone problems</strong> — when rewrites feel wrong or “off”.</li>
-          </ul>
-          <p>WarmDM focuses on voice, identity, and tone. One click and your message sounds human.</p>
+        </ul>
+
+        <p>WarmDM focuses on voice, identity, and tone. One click and your message sounds human.</p>
+      </section>
 
 
       <!-- HOW IT WORKS -->
