founder card update

--- a/public/index.html
+++ b/public/index.html
@@ -221,8 +221,12 @@
 
     <div class="founder-contact">
     Built by a real human.
-    <a href="https://x.com/gomichaels" target="_blank" rel="noopener">Say hi on Twitter</a>
+    <a href="https://x.com/gomichaels" target="_blank" rel="noopener" class="founder-twitter-link">
+    <span class="twitter-icon">✦</span>
+    Say hi on Twitter/X.com
+    </a>
     </div>
+
 
   <div style="display:none">
     <h3>Examples of what WarmDM fixes</h3>
