--- a/public/index.html
+++ b/public/index.html
@@ -131,9 +131,9 @@
       <section class="info-section">
         <h3>What WarmDM does</h3>
         <p>
-          WarmDM rewrites your message so it feels more natural, human, and real.
-          You choose how it should sound and who it should feel like it’s coming from.
-          The tool keeps your meaning but improves the delivery.
+          WarmDM rewrites your message so it sounds like you on a good day.
+          You choose the tone and the voice.
+          It keeps what you meant to say, but fixes how it comes across.
         </p>
 
         <!-- RESTORED SEO BOXES -->
