--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,8 @@
 
         <div class="faq-item">
           <h4>Is WarmDM like Grammarly?</h4>
-          <p>No. Grammarly fixes correctness. WarmDM fixes tone. It makes your message feel more human.</p>
+          <p>No. Grammarly fixes correctness. WarmDM fixes how your message comes across.
+            It keeps your meaning the same, but makes it sound more natural and human.</p>
         </div>
 
         <div class="faq-item">
@@ -223,7 +224,7 @@
     Built by a real human.
     <a href="https://x.com/gomichaels" target="_blank" rel="noopener" class="founder-twitter-link">
     <span class="twitter-icon">✦</span>
-    Say hi on Twitter/X.com
+    Say hi on Twitter
     </a>
     </div>
 
