--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>WarmDM — Rewrite messages so they sound human</title>
   <meta name="title" content="WarmDM — Rewrite messages so they sound human" />
   <meta name="description"
-        content="WarmDM rewrites any message so it sounds natural, warm, and human — not stiff, not robotic, not AI-like. Paste, choose tone, get a human-grade rewrite instantly." />
+        content="Rewrite any message so it sounds natural and human. Fix tone, not grammar. Paste, choose a voice, send." />
 
   <!-- Keywords (light, non-spammy) -->
   <meta name="keywords" content="rewrite message, sound human, message rewriter, natural tone, rewrite text, humanize message, fix tone" />
